# blackhat-rust

combinators/src/: main.rs
scanner/: Cargo.toml
scanner/src/: error.rs  main.rs  ports.rs  subdomain.rs  subdomains.rs
sha1_cracker/src/: main.rs
